Draft test blog

--- a/_posts/2016-04-10-test.md
+++ b/_posts/2016-04-10-test.md
@@ -5,6 +5,7 @@ date:   2016-04-10 13:14:15
 image: header.jpg
 comments: true
 tags: test, en
+draft: true
 ---
 
 Note: This style test is taken verbatum from the official Roon style test on
