--- a/_posts/2017-05-03-crazy.md
+++ b/_posts/2017-05-03-crazy.md
@@ -28,7 +28,7 @@ To some extent it almost feels like an ant trying to figure out what an elephant
 
 In our own way, I think we are experiencing something similar in the Ethereum universe. Apparently this exact type of intellectual discovery through playful exploration is what attracts the so-called “innovators” demographic described by Everett Rogers in the [theory of diffusion of innovations](https://en.wikipedia.org/wiki/Diffusion_of_innovations){:target="_blank"} - tenacious spirits subconsciously waiting for their cue to awaken and change the world.
 
-image 
+![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/innovators.jpg) 
 
 It’s almost as if some people are wired to be magnetically drawn to creating, influencing and pushing new paradigms beyond the “[tipping point](https://en.wikipedia.org/wiki/Tipping_point_(sociology)){:target="_blank"}”.  
 
@@ -46,7 +46,7 @@ With your help we were able to make the first steps and prove that **this future
 
 > “It is our hope that years from now, we will look back at today — May 3rd, 2016 — as the day on which the idea that freedom of expression can be a default standard on the web took root on the Internet.”
 
-timelapse image 
+![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/spacelapse.jpg) 
 
 Following your amazing warm welcome, we felt both energized and motivated to give it our 110% and deliver *something good* as soon as possible. It was becoming clear that we haven’t been crazy for spending the last several months of our lives working on this….or that we weren’t the only ones who were crazy! :) 
 
@@ -58,15 +58,15 @@ This started around 21:00 and lasted until close to 00:30 when we had finally fi
 
 Around 03:20 we were ready with pretty much everything, and then this message greeted us: 
 
-mailchimp image 
+![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/mailchimp-glory.jpg) 
 
 Here is a picture of our Bucharest team celebrating Christmas and the first release of the alpha. It was a Christmas to remember!
 
-team image 
+![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/christmas-team.jpg)
 
 Following the release, these comments were the best Christmas present we could have hoped for!
 
-comments image 
+![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/christmas-comments.jpg) 
 
 Step by step, we learned how to fuse [Ethereum](https://ethereum.org/){:target="_blank"} and [IPFS](https://ipfs.io/){:target="_blank"} into a functional dapp, how to build decentralized identity and voting systems, how to implement IRC-like interfaces for Whisper-based secure group messaging, and how to bring to life truly private searches with our Whisper search engine experiment. 
 
@@ -82,7 +82,7 @@ I think it is time to declare that the first stages of the experiment were a **r
 
 > “Only those who dare to fail greatly can ever achieve greatly.” ― Robert F. Kennedy
 
-space timelapse image 
+![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/new-horizons.jpg) 
 
 If the first year was mostly focused on the “tech challenge” and proving that the idea can work- the next year will be mainly about exploring new horizons and pushing the experiment(s) to the next level. 
 
@@ -111,7 +111,7 @@ We want to apply this type of thinking to other areas too.
 
 Since the *beginning*, the AKASHA token was a matter of great interest for all of us. However, the amount of research and development that goes into architecting a solid crypto economic token foundation was too much for us to handle at the time. We already had a big experiment on our hands: prove that the idea can work from a technological standpoint. 
 
-keep your coins image 
+![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/tokentokentoken.jpg) 
 
 This is why we decided to treat the token aspect of AKASHA as an “experiment module” of its own- next to other interesting crypto challenges such as reputation. So we began to root ourselves in an awareness that *we are just a handful of people with limited resources and big dreams.* 
 
@@ -127,13 +127,13 @@ We figured that if the idea and product are solid then “the money” will foll
 
 Just a few weeks ago [Vlad Zamfir](https://twitter.com/VladZamfir){:target="_blank"} visited our hacklab and shared his wisdom. It was a ***fun week*** filled with brainstorming sessions and insightful moments. Among many things, we have explored the concept of continuous token models and how the idea could fit into the whole puzzle. 
 
-vlad image 
+![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/vlad-zamfir-akasha.jpg) 
 
 We filled the whiteboard with ideas and made notes in anticipation for the next step.
 
 In just a few days we will enjoy the company of another special guest at our hacklab - [Meher Roy](https://twitter.com/MeherRoy){:target="_blank"}. You might know him from the [Epicenter show](https://epicenter.tv/){:target="_blank"} or for his contributions to crypto economic models surrounding attention economies. We met for the first time in the early days of Ethereum at the Swiss “space ship” house and have worked since then on different projects. 
 
-meher presentation image 
+![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/meher-presentation.jpg) 
 
 Recently, we began realizing that we were working, in our own way, on different pieces of the same puzzle. We plan to publish a detailed blog post covering the exchange of ideas after the visit, and we want to document our discussions and findings - hopefully capturing the genesis of something ***amazing***.
 
