--- a/_posts/2017-05-03-crazy.md
+++ b/_posts/2017-05-03-crazy.md
@@ -4,7 +4,7 @@ title: "Here's To The Crazy Ones"
 timezone: Europe/Zurich
 date: 2017-05-03 00:00:01
 future: true
-image: freedom of the press.jpg
+image: Nasa-moon.jpg
 comments: true
 tags: AKASHA, Ethereum, IPFS, Alpha, Pre-Alpha, Release, Anniversary, Success
 draft: true
@@ -46,7 +46,7 @@ With your help we were able to make the first steps and prove that **this future
 
 > “It is our hope that years from now, we will look back at today — May 3rd, 2016 — as the day on which the idea that freedom of expression can be a default standard on the web took root on the Internet.”
 
-![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/Spacelapse.jpg) 
+![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/Spacelapse.jpg)
 
 Following your amazing warm welcome, we felt both energized and motivated to give it our 110% and deliver *something good* as soon as possible. It was becoming clear that we haven’t been crazy for spending the last several months of our lives working on this….or that we weren’t the only ones who were crazy! :) 
 
