--- a/_posts/2017-05-03-crazy.md
+++ b/_posts/2017-05-03-crazy.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Here's To The Crazy Ones"
+title: "The Odyssey Into The Ether Continues"
 timezone: Europe/Zurich
 date: 2017-05-03 00:00:01
 future: true
@@ -117,7 +117,7 @@ This is why we decided to treat the token aspect of AKASHA as an “experiment m
 
 It helped to frame it as a game- in the sense that if we can solve the “tech challenge” then we can focus our available resources on the “incentives challenge” - we have to pass level 1 before gaining access to level 2. 
 
-![Juan Benet IPFS AKASHA]({{ site.baseurl }}/content/images/chalenge-accepted.jpg) 
+![Challenge accepted AKASHA]({{ site.baseurl }}/content/images/challenge-accepted.jpg) 
 
 It was not the “standard” blockchain project approach - write a paper, make a website, add advisors, launch a token sale - we wanted to focus more on the “technology” in the first stage rather than “the money” anyway. 
 
